  QGraphicsScene::addItem() to add the item to the scene.

* QAbstractItemView and derived classes only emit the clicked() signal on left click now,
  instead of on all mouse clicks.

* QProxyModel has been removed. It is deprecated since early Qt 4 versions and replaced
  by QAbstractProxyModel and related classes. A copy of QProxyModel is available
  in the UiHelpers library.

* [QTBUG-20503] QFileSystemModel no longer masks out write permissions from the permissions
  returned from permissions() or data(FilePermissions), even if in read-only mode
  (QFileSystemModel::isReadOnly()).

* [QTBUG-158 QTBUG-428 QTBUG-26501] QComboBox::currentText improvements
  Restored currentText as USER property.
  New setter setCurrentText(), marked as WRITE method, usable by QItemDelegate and QDataWidgetMapper.
  New signal currentTextChanged() marked as NOTIFY method.

QtNetwork
---------
* QHostAddress::isLoopback() API added. Returns true if the address is
  one of the IP loopback addresses.

* QSslCertificate::serialNumber() now always returns the serial number in
  hexadecimal format.

* The openssl network backend now reads the ssl configuration file allowing
  the use of openssl engines.

QtDBus
------
* QtDBus now generates property annotations for the Qt type names
  in the org.qtproject.QtDBus namespace. When parsing such annotations
  both the old and new namespaces are accepted.

* QtDBus error codes have been updated to be on the org.qtproject.QtDBus.Error
  namespace.

QtConcurrent
------------

* QtConcurrent is no longer in QtCore, but forms its own library now.
  QMake-based projects can use
    QT += concurrent
  to include the new library.

* QtConcurrent::Exception has been renamed to QException, and is still in QtCore.
  Ditto QtConcurrent::UnhandledException.

QtOpenGL
--------

* Most of the classes in this module (with the notable exception of QGLWidget)
  now have equivalents in QtGui, along with the naming change QGL -> QOpenGL.