@@ -228,6 +228,16 @@ public:
     QShortcutMap shortcutMap;
 #endif
 
+#ifndef QT_NO_SESSIONMANAGER
+    QSessionManager *session_manager;
+    QString session_id;
+    QString session_key;
+    bool is_session_restored;
+    bool is_saving_session;
+    void commitData(QSessionManager& sm);
+    void saveState(QSessionManager& sm);
+#endif
+
     struct ActiveTouchPointsKey {
         ActiveTouchPointsKey(QTouchDevice *dev, int id) : device(dev), touchPointId(id) { }
         QTouchDevice *device;
